--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -1,6 +1,9 @@
+@import "../components/todo/shared";
+@import "./breakpoints";
+
 @mixin box-shadow(
-  $offset-x: 2px, 
-  $offset-y: 3px, 
+  $offset-x: 2px,
+  $offset-y: 3px,
   $opacity: 2.6px,
   $size: 1px,
   $color: #b4b4b4
