--- a/src/app/components/color-palet/color-pale.style.module.scss
+++ b/src/app/components/color-palet/color-pale.style.module.scss
@@ -3,20 +3,27 @@
 .palette {
   @include box-shadow;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(1, auto);
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(2, auto);
   background-color: white;
   border-radius: 10px;
   padding-inline: 10px;
   padding-block: 5px;
   gap: 10px;
-  width: fit-content;
   position: relative;
+  z-index: 2;
+  width: fit-content;
 
-  $circle-size: 37px;
+  $size: 37px;
   div {
-    width: $circle-size;
-    height: $circle-size;
+    width: $size;
+    height: $size;
     border-radius: 100%;
+  }
+}
+
+@media (min-width: $md) {
+  .palette {
+    display: flex;
   }
 }
