--- a/src/app/components/todo/shared.module.scss
+++ b/src/app/components/todo/shared.module.scss
@@ -3,7 +3,7 @@
 
 .todo {
   @include todo-responsiviness;
-  @include box-shadow($offset-x: 0px, $offset-y: 1px, $size: 1px);
+  transition: height .2s;
   height: 125px;
   border-radius: 5px;
   padding-inline: $todo-padding-inline;
@@ -25,6 +25,7 @@
   justify-content: space-between;
   position: relative;
   padding-inline: $additional-body-padding;
+  z-index: 2;
 
   > input {
     z-index: 1;
@@ -57,4 +58,9 @@
     margin-inline: $additional-body-padding;
     font-size: 15px;
   }
+}
+
+.favorite-container {
+  position: relative;
+  z-index: 2;
 }
